try fixing toast position on mobile

--- a/static/app/styles/app.scss
+++ b/static/app/styles/app.scss
@@ -169,7 +169,7 @@ input[type=number] {
 }
 /* Toasts */
 .toast-wrap {
-  position: absolute;
+  position: fixed;
   bottom: 20px;
   left: 20px;
   background-color: rgba(0, 0, 0, .8);
@@ -180,10 +180,13 @@ input[type=number] {
   visibility: hidden;
   transform: translateY(20px);
   transition: all 0.3s ease-in-out;
+  z-index: 1;
+  pointer-events: none;
 
   &.visible {
     visibility: visible;
     transform: translateY(0);
+    pointer-events: auto;
   }
   .glyphicon {
     padding-right: 10px;
